# PQP

./: CMakeLists.txt  README.md
demo_dependencies/: CMakeLists.txt
demo_dependencies/glut/: CMakeLists.txt
demos/falling/: main.cpp  model.cpp
demos/spinning/: model.cpp  model.h
src/: PQP.cpp  PQP.h
